<resources>
    <string name="app_name">慧翼溯源系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">检查到最新版本！</string>
    <string name="soft_update_info">更新内容：1、增加了包装关联功能2、增加了清空数据库功能</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- main -->
    <string name="string_storage">入库管理</string>
    <string name ="string_shipment">出库管理</string>
    <string name ="string_refund">退货管理</string>
    <string name ="string_export">导出数据</string>
    <string name ="string_update">更新数据</string>
    <string name ="string_exit">退出管理</string>
    <string name="string_title">生产管理平台</string>
    <string name="string_login_name">请输入账号</string>
    <string name="string_login_password">请输入密码</string>
    <string name="string_login_pattern">登录模式:</string>
    <string name="string_pattern_offline">离线模式</string>
    <string name="string_pattern_online">在线模式</string>
    <string name="string_set">设置</string>
    <string name="string_login">登录</string>
    <string name="string_versions">版本:2.25</string>
    <string name="string_about">设置</string>
    <string name="string_remember">记住密码</string>
    <!-- about -->
    <string name="string_address">服务器地址:</string>
    <!-- storage -->
    <string name="string_production_order">生产单号 :</string>
    <string name="string_identification_mark">产品批号 :</string>
    <string name="string_product_name">产品名称 :</string>
    <string name="string_product_specifications">产品规格 :</string>
    <string name="string_package_size">包装比例 :</string>
    <string name="string_storage_time">入库时间 :</string>
    <string name="string_offline_add">离线添加</string>
    <string name="string_local_deletion">本地删除</string>
    <string name="string_qr">二维码 :</string>
    <string name="string_package_total">包装总数 :</string>
    <string name="string_storage_number">入库数量 :</string>
    <string name="string_storage_hint">提示</string>
    <!-- shipment -->
    <string name="string_shipment_delivery_order">交货单号 :</string>
    <string name="string_shipment_customer_name">客户名称 :</string>
    <string name="string_shipment_delivered_number">交货数量 :</string>
    <string name="string_shipment_shipping_time">出货时间 :</string>
    <string name="string_shipment_offline_shipment">离线出货</string>
    <string name="string_shipment_qr_number">离线扫描数量 :</string>
    <!-- refund -->
    <string name="string_refund_return_reason">退货原因 :</string>
    <string name="string_refund_return_time">退货时间 :</string>
    <string name="string_refund_return_offline">离线退货</string>
    <string name="string_refund_bar_code">条码 :</string>
    <!-- export -->
    <string name="string_export_entry_information">导出入库信息</string>
    <string name="string_export_shipment_information">导出出货信息</string>
    <string name="string_export_refund_information">导出退货信息</string>
    <string name="string_export_export">导出</string>
    <!-- update -->
    <string name="string_update_update">更新</string>
    <string name="string_about_save">保存</string>

</resources>
