<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_title"
        android:textSize="28dp"
        android:gravity="center"
        android:layout_margin="10dp"
        />
    <!-- 账号 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_perm_identity_black_24dp"
            />
        <EditText
            android:id="@+id/login_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_login_name"
            />
    </LinearLayout>
    <!-- 密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_outline_black_24dp"
            />
        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_login_password"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <!-- 记住密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">
        <CheckBox
            android:id="@+id/login_remember_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_remember"
            />
    </LinearLayout>


    <!-- 模式 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login_pattern"
            android:textSize="15dp"
            />
        <RadioGroup
            android:id="@+id/login_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/login_offline_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_pattern_offline"/>
            <RadioButton
                android:id="@+id/login_online_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_pattern_online"
                android:checked="true"
                />
        </RadioGroup>
    </LinearLayout>

    <!-- 按钮 -->
        <Button
            android:id="@+id/login_login_bt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/string_login"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape"
            android:layout_margin="10dp"
            />
    <!-- 关于 -->
    <TextView
        android:id="@+id/login_about_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_about"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/colorBlue"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_versions"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        />
</LinearLayout>