<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <!-- 交货单号 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shipment_delivery_order"
                />
            <Spinner
                android:id="@+id/shipment_deliver_order_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <!-- 产品名称 -->
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_product_name"
                />
            <Spinner
                android:id="@+id/shipment_product_name_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <!-- 产品规格 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_product_specifications"
                />
            <EditText
                android:id="@+id/shipment_specifications_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 客户名称 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shipment_customer_name"
                />
            <EditText
                android:id="@+id/shipment_customer_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                />
            <!-- android:focusable="false"  取消焦点-->
        </LinearLayout>

        <!-- 交货数量 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shipment_delivered_number"
                />
            <EditText
                android:id="@+id/shipment_delivered_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 出货时间 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shipment_shipping_time"
                />
            <EditText
                android:id="@+id/shipment_storagetime_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 复选框 -->
        <RadioGroup
            android:id="@+id/shipment_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <!-- 离线出货 -->
            <RadioButton
                android:id="@+id/shipment_offline_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_shipment_offline_shipment" />
            <!-- 本地删除 -->
            <RadioButton
                android:id="@+id/shipment_deletion_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_local_deletion" />
        </RadioGroup>

        <!-- 二维码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_qr"
                />
            <EditText
                android:id="@+id/shipment_qr_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 提示 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_storage_hint"
            />

        <!-- 扫描数量 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shipment_qr_number"
                />
            <TextView
                android:id="@+id/shipment_qr_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorRed"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>