<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >

    <!-- 导出入库信息 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_export_entry_information"
        />

    <!-- 生产单号 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_production_order"
            />
        <Spinner
            android:id="@+id/export_production_order_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <!-- 导出 -->
    <Button
        android:id="@+id/export_production_order_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape"
        android:text="@string/string_export_export"
        android:layout_margin="5dp"
        />

    <!-- 提示信息 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="文件存放在Huiyi/storage/文件夹里"
        android:textColor="@color/colorRed"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <!-- 导出出货信息 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_export_shipment_information"
        android:layout_marginTop="20dp"
        />

    <!-- 交货单号 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_shipment_delivery_order"
            />
        <Spinner
            android:id="@+id/export_delivery_order_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <!-- 导出 -->
    <Button
        android:id="@+id/export_delivery_order_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape"
        android:text="@string/string_export_export"
        android:layout_margin="5dp"
        />

    <!-- 提示信息 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="文件存放在Huiyi/shipment/文件夹里"
        android:textColor="@color/colorRed"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <!-- 导出退货信息 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_export_refund_information"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

    <!-- 导出 -->
    <Button
        android:id="@+id/export_refund_order_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape"
        android:text="@string/string_export_export"
        android:layout_margin="5dp"
        />

    <!-- 提示信息 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="文件存放在Huiyi/refund/文件夹里"
        android:textColor="@color/colorRed"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
</LinearLayout>
</ScrollView>