<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- 退货原因 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_refund_return_reason"
                />
            <EditText
                android:id="@+id/refund_specifications_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 退货时间 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_refund_return_time"
                />
            <EditText
                android:id="@+id/refund_return_time_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 复选框 -->
        <RadioGroup
            android:id="@+id/refund_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <!-- 离线退货 -->
            <RadioButton
                android:id="@+id/refund_offline_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_shipment_offline_shipment" />
            <!-- 本地删除 -->
            <RadioButton
                android:id="@+id/refund_deletion_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_local_deletion" />
        </RadioGroup>

        <!-- 条码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_refund_bar_code"
                />
            <EditText
                android:id="@+id/refund_bar_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <!-- 扫描数量 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_shipment_qr_number"
                />
            <TextView
                android:id="@+id/refund_qr_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorRed"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:text="注意:先填写退货原因,再扫二维码!"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            />
    </LinearLayout>
</ScrollView>